--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,12 +14,25 @@ html {
  * Global layout stuff
  */
 
+
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family:'Source Sans Pro', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+   width: 90%;
+   align-items: center;
+   background-color: #f4f1ec;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin-left: auto;
+   margin-right: auto;
+ }
