added some functionality to the char counter script so that a new class is added to the counter when below zero. Also added styling for that new class

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,9 +21,18 @@
   justify-content: space-between;
 }
 
-button {
+#button {
   background-color: blue;
   color: white;
   font-family: 'Bungee', sans-serif;
+}
+
+.counter {
+  font-family: 'Bungee', sans-serif;
+}
+
+.counter-negative {
+  font-family: 'Bungee', sans-serif;
+  color: red;
 }
 
