added a new function in client.js that takes tweet data and returns a html article. Also changed some classes and id's to make it sync with the article styling

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -10,13 +10,13 @@ article.tweets header {
   padding-right: 5%;
 }
 
-#tweet-name {
+article.tweet-name {
   padding-left: 5%;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
 }
 
-#tweet-tag {
+article.tweet-tag {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 100;
 }
