created an html element that contains error messages

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -37,3 +37,23 @@
   color: red;
 }
 
+.error,
+.validation {
+	border: 1px solid;
+	margin: 10px auto;
+	padding: 15px 10px 15px 50px;
+	background-repeat: no-repeat;
+	background-position: 10px center;
+	max-width: 460px;
+  display: none;
+  color: #D8000C;
+	background-color: #FFBABA;
+	background-image: url('https://i.imgur.com/GnyDvKN.png');
+}
+
+.error {
+	color: #D8000C;
+	background-color: #FFBABA;
+	background-image: url('https://i.imgur.com/GnyDvKN.png');
+  display: none;
+}
