--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,7 @@
-.new-tweet {
+section.new-tweet {
   display: flex;
   flex-direction: column;
-  width:max-content;
+  width: 100%;
 }
 
 #tweet-text {
