--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,6 +13,8 @@ nav {
 
 span {
   font-family: 'Bungee', sans-serif;
+  display: flex;
+  align-items: center;
 }
 
 body {
@@ -21,4 +23,20 @@ body {
 
 header {
   z-index: 1;
+}
+
+.nav-buttons {
+  background-color: #4056A1;
+
+}
+
+.nav-buttons:hover {
+  font-weight: bold;
+}
+
+.nav-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
