--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,7 +27,7 @@ body {
  */
 
  main {
-   width: 90%;
+   width: 100%;
    align-items: center;
    background-color: #f4f1ec;
    display: flex;
@@ -35,4 +35,17 @@ body {
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
+ }
+
+ /* Desktop */
+
+ @media only screen and (min-width: 1024px) {
+   body {
+     display: flex;
+     justify-content: space-between;
+   }
+   main {
+     zoom: 0.7;
+     margin-top: 5rem;
+   }
  }
