--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,7 @@
 section.new-tweet {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
 }
 
 #tweet-text {
@@ -15,6 +15,7 @@ section.new-tweet {
   border-bottom: 3px solid rgb(66, 65, 65);
   padding-bottom: 5px;
   margin-bottom: 5px;
+  margin-top: 20px;
 }
 
 .tweet-lower {
@@ -56,4 +57,15 @@ section.new-tweet {
 	background-color: #FFBABA;
 	background-image: url('https://i.imgur.com/GnyDvKN.png');
   display: none;
+}
+
+
+/* Desktop */
+
+@media only screen and (min-width: 1024px) {
+  section.new-tweet {
+   margin-top: 200px;
+   width: 85%;
+ }
+ 
 }
