cleaned up the css sheets by removing unused styles and ensuring specificity to reach target. Also fixed a bug in the char counter so that when users exceed 140 char and then go back under, the counter color resets to black

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,34 +1,23 @@
 #header-top {
   height: 400px;
   width: 100%;
-
 }
 
 .aligner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   zoom: 0.8;
   background-color: #f0771a;
   background-image: url("https://www.transparenttextures.com/patterns/food.png");
-}
-
-.aligner-item {
-  max-width: 50%;
 }
 
 .aligner-item-top {
   height: 150px;
 }
 
-.aligner-item-middle {
-  align-self: center;
-  height: 150px;
-}
-
 .profile-pic {
-  height: 200px;
+  height: 15rem;
 }
 
 /* Desktop */
