--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,3 +1,52 @@
+/*
+ * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+ * https://css-tricks.com/international-box-sizing-awareness-day/
+ * Do not modify these two selectors, please
+ */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/*
+ * Global layout stuff
+ */
+body {
+  color: #545149;
+  background-color: #f4f1ec;
+  font-size: 24px;
+  font-family: "Source Sans Pro";
+}
+
+/*
+ * Additional CSS can be defined below or in other CSS files, as per instructions
+ */
+main {
+  width: 100%;
+  align-items: center;
+  background-color: #f4f1ec;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  main {
+    zoom: 0.7;
+    margin-top: 5rem;
+  }
+}
 #header-top {
   height: 400px;
   width: 100%;
@@ -21,14 +70,14 @@
 }
 
 /* Desktop */
-
 @media only screen and (min-width: 1024px) {
   #header-top {
-   width: 80%;
-   margin-top: 120px;
- }
- .aligner {
-   margin: 20%;
-   zoom: 0.6;
-}
+    width: 80%;
+    margin-top: 120px;
+  }
+
+  .aligner {
+    margin: 20%;
+    zoom: 0.6;
+  }
 }
