--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -13,39 +14,36 @@ html {
 /*
  * Global layout stuff
  */
-
-
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family:'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro";
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+main {
+  width: 100%;
+  align-items: center;
+  background-color: #f4f1ec;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
- main {
-   width: 100%;
-   align-items: center;
-   background-color: #f4f1ec;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   margin-left: auto;
-   margin-right: auto;
- }
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: space-between;
+  }
 
- /* Desktop */
-
- @media only screen and (min-width: 1024px) {
-   body {
-     display: flex;
-     justify-content: space-between;
-   }
-   main {
-     zoom: 0.7;
-     margin-top: 5rem;
-   }
- }
+  main {
+    zoom: 0.7;
+    margin-top: 5rem;
+  }
+}
