--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,10 +1,60 @@
+/*
+ * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+ * https://css-tricks.com/international-box-sizing-awareness-day/
+ * Do not modify these two selectors, please
+ */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/*
+ * Global layout stuff
+ */
+body {
+  color: #545149;
+  background-color: #f4f1ec;
+  font-size: 24px;
+  font-family: "Source Sans Pro";
+}
+
+/*
+ * Additional CSS can be defined below or in other CSS files, as per instructions
+ */
+main {
+  width: 100%;
+  align-items: center;
+  background-color: #f4f1ec;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  main {
+    zoom: 0.7;
+    margin-top: 5rem;
+  }
+}
 nav {
   position: fixed;
   top: 0%;
   height: 120px;
   width: 100%;
   background-color: #f0771a;
-  color: #FFFFFF;
+  color: #f4f1ec;
+  background-image: url("https://www.transparenttextures.com/patterns/food.png");
   padding-left: 1.5em;
   padding-right: 1.5em;
   display: flex;
@@ -12,7 +62,7 @@ nav {
 }
 
 span {
-  font-family: 'Bungee', sans-serif;
+  font-family: "Bungee", sans-serif;
   display: flex;
   align-items: center;
 }
@@ -33,9 +83,8 @@ span {
 }
 
 /* Desktop */
-
 @media only screen and (min-width: 1024px) {
   nav {
-   background-color: #4056A1;
- }
+    background-color: #4056A1;
+  }
 }
