--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -6,7 +6,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -16,10 +19,11 @@ html {
 
 $base-color: #545149;
 $background-color: #f4f1ec;
-$base-font:'Source Sans Pro'; 
+$base-font:'Source Sans Pro';
 $primary-color: #f0771a;
 $secondary-color: #4056A1;
-$secondary-font:'Bungee', sans-serif;
+$secondary-font:'Bungee',
+sans-serif;
 $background-image: url("https://www.transparenttextures.com/patterns/food.png");
 $border-color: rgb(66, 65, 65);
 $error-color: red;
@@ -37,26 +41,27 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main {
-   width: 100%;
-   align-items: center;
-   background-color: $background-color;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   margin-left: auto;
-   margin-right: auto;
- }
+main {
+  width: 100%;
+  align-items: center;
+  background-color: $background-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
- /* Desktop */
+/* Desktop */
 
- @media only screen and (min-width: 1024px) {
-   body {
-     display: flex;
-     justify-content: space-between;
-   }
-   main {
-     zoom: 0.7;
-     margin-top: 5rem;
-   }
- }
+@media only screen and (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  main {
+    zoom: 0.7;
+    margin-top: 5rem;
+  }
+}
